<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="es.uam.eps.dadm.cards.StudyViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{ viewModel.card == null ? View.INVISIBLE : View.VISIBLE}" >


        <es.uam.eps.dadm.cardfire.views.BoardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/info_text_view"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{@string/due_cards_format(viewModel.nDueCards)}"
            android:textSize="25sp"
            tools:text="@string/info_text_view_message" />


        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.card.question}"
            android:textSize="20sp"
            tools:text="Question text" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text_view"
            android:layout_centerInParent="true"
            android:layout_marginTop="19dp"
            android:text="@{viewModel.card.answer}"
            android:textSize="20sp"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            tools:text="Answer text" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_text_view"
            android:layout_marginTop="4dp"
            android:text="@string/answer_button_text"
            android:visibility="@{viewModel.card.answered ? View.INVISIBLE : View.VISIBLE}" />

        <View
            android:id="@+id/separator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/question_text_view"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="-3dp"
            android:background="@android:color/darker_gray"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/difficultyButtons"
            android:visibility="@{viewModel.card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/difficult_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult_button_title"
                android:backgroundTint="@android:color/holo_red_light">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doubt_button_title"
                android:backgroundTint="@android:color/holo_blue_light">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_button_title"
                android:backgroundTint="@android:color/holo_green_light">
            </com.google.android.material.button.MaterialButton>

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </RelativeLayout>

</layout>
